package com.company.erp.modules.education.domain.model.valueobject;

public enum ProgramLevel {
    BEGINNER,
    INTERMEDIATE,
    ADVANCED,
    PROFESSIONAL,
    CERTIFICATION
}
